--- a/pages/playlist/playlist.wxss
+++ b/pages/playlist/playlist.wxss
@@ -1,11 +1,11 @@
-/* pages/playlist/playlist.wxss */
 /* 头部 */
-.listSongContainer .header {
+.song-list-container .header {
   position: relative;
   width: 100%;
   height: 300rpx;
 }
- .listSongContainer .header image {
+
+ .song-list-container .header image {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,11 +15,11 @@
   width: 800rpx;
   height: 800rpx;
 }
-.listSongContainer .header .discribe {
+
+.song-list-container .header .describe {
   position: absolute;
   left: 30%;
   top:20%;
-
   width: 300rpx;
   height: 100rpx;
   text-align: center;
@@ -27,7 +27,8 @@
   color: #eee;
   font-size: 30rpx;
 }
-/* 列表 */
+
+/* 歌曲列表头 */
 .ListContainer {
   position: relative;
   top: -20rpx;
@@ -35,32 +36,39 @@
   border-radius: 30rpx;
   background: #fff;
 }
+
 .listHeader {
   height: 80rpx;
   line-height: 80rpx;
 }
+
 .listHeader .changeMore {
   float: right;
 }
-/* 歌曲 */
+
+/* 歌曲列表 */
 .listScroll {
   height: calc(100vh - 380rpx);/*整体高度减去除了scroll-view的元素的高度，即可得到只使得scroll-view元素滑动效果*/
 }
+
 .scrollItem {
   display: flex;
   position: relative;
   margin-bottom: 20rpx;
 }
+
 .scrollItem image {
   height: 80rpx;
   width: 80rpx;
   border-radius: 8rpx;
 }
+
 .musicInfo {
   display: flex;
   flex-direction: column;
   margin-left: 20rpx;
 }
+
 .musicInfo text {
   height: 40rpx;
   line-height: 40rpx;
@@ -70,6 +78,7 @@
   overflow: hidden;/*超过部分隐藏*/
   text-overflow: ellipsis;/*超过部分换为省略号*/
 }
+
 .scrollItem .iconfont{
   position: absolute;
   right: 10rpx;
