--- a/songPackage/pages/songDetail/songDetail.wxml
+++ b/songPackage/pages/songDetail/songDetail.wxml
@@ -30,7 +30,7 @@
   <view class="musicControl">
     <text class="iconfont icon-iconsMusicyemianbofangmoshiShuffle"></text>
 
-    <text class="iconfont icon-shangyishou" id="pre" bindtap="handleSwitch"></text>
+    <text class="iconfont icon-shangyishou" id="prev" bindtap="handleSwitch"></text>
 
     <text class="iconfont {{isPlay?'icon-zanting': 'icon-bofang'}} big" bindtap="handleMusicPlay"></text>
 
